Do not emit OnActiveTouchesCanceled if cancel did not happen

As is reported in the bug, the window service receives too many
mojo messages for CancelActiveTouches, and that's because
it always sends the messages every time CancelActiveTouches is
requested. But it doesn't have to send it if nothing has to be
canceled.

BUG=899429
TEST=manually, and the new test case covers

Change-Id: I26b0234ef9e541b5dc31623d27162a0ea374bb54
Reviewed-on: https://chromium-review.googlesource.com/c/1305235
Commit-Queue: Jun Mukai <mukai@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Reviewed-by: Timothy Dresser <tdresser@chromium.org>
Cr-Commit-Position: refs/heads/master@{#603744}
Former-commit-id: 8ff4782ac1800ff6c089d036b579ae64951ec21f